# A_Simple_QQ_Bot

./: .gitignore  README.md  configs.yml  core.py  decorators.py  main.py  mem_leak.py  orm.py  pyproject.toml  requirements.txt  setting.py
core/: __init__.py  judge.py  modules.py
docs/: About_MessageChain.md  About_bcc.md  How_to_make_a_bot.md  install.md
entertain/: 5000M.py  COVID.py  anime_timesche.py  auto_ban.py  baidu.py  bangumi.py  bar_music.py  birthday_searcher.py  chuigen.py  config.json  dd.py  ero.py  ghost_tank.py  help.py  hotword_search.py  in.py  material.py  moegirl_info.py  nbnhhsh.py  ph.py  sche.py  setu.py  video_info.py
entertain/bili/: audio_info.py  video_info.py
entertain/dd/: __init__.py  dd_info.yml  s.py  status.py
entertain/petpet/: petpet.py
entertain/pic/: __init__.py
expand/: Netease.py  bilibili.py  black.py  forbidden_word.py  judge.py  sakura.py  save.py  tencent_ai.py  text.py  transcode.py
modules/: entertain
modules/basic/: console_chat.py  exception_catch.py  restart.py  robot_log.py
modules/entertain/: 5000M.py  COVID.py  anime_timesche.py  auto_ban.py  bangumi.py  bar_music.py  birthday_searcher.py  hotword_search.py  i_have_a_friend.py  moegirl_info.py  moyu.py  ph.py
plugins/basic/: console_chat.py  exception_catch.py  normal_reply.py  restart.py  robot_log.py
plugins/entertain/: 5000M.py  COVID.py  anime_timesche.py  auto_ban.py  baidu.py  bangumi.py  bar_music.py  birthday_searcher.py  ghost_tank.py  hotword_search.py  material.py  moegirl_info.py  moyu.py  nbnhhsh.py  ph.py
src/dinggong_silk/: 01_你这家伙，找块豆腐一头撞死算了！_.silk  05_什么“早安”，应该说“您早上好”才对！_.silk  10_要是你受伤的话，岂不是会让我很头疼。_.silk  13_我才没有为你担心！_.silk  14_我、我可不是因为自己喜欢才打扮成这样…只有在你面前罢了…_.silk  15_真是的…笨蛋…_.silk  16_尽管放马过来吧！让我打你个落花流水！_.silk  22_为什么…_.silk  23_为什么你就是注意不到嘛！_.silk  27_那、那家伙干什么嘛！_.silk  29_别逃，至少听我把话说完！_.silk  30_ 真是的，不管啦笨蛋！！你让人家怎么说嘛！！_.silk  32_你可不许对我说“No”哦_.silk  33_虽然很丢人，让、让、让你牵牵手还是可以容忍…来吧…_.silk  35_唔，今天只有我们两个人的话…_.silk  39_别在那装傻了啦！！真是的_.silk  40_小心我一脚踢飞你！_.silk  41_啊…也好，既然你坚持要带着…_.silk  46_所以说只是从眼睛里流出来的汗啦！_.silk  48_真是的~笨蛋、笨蛋、笨蛋！！_.silk  49_不知道、不知道、不知道！_.silk  51_所以说我最讨厌优柔寡断的家伙了！_.silk  57_诶，让我帮你吹吹？笨蛋啊你~_.silk  59_我才没有很开心呢！_.silk  60_要多多的和我联系！不然我会担心你的…_.silk
static/dinggong_silk/: 02_你还是老老实实定个闹钟起床啊！干吗每次都非要我来叫醒你嘛。_.silk  03_吵死了吵死了吵死了！真是吵死了！_.silk  04_ 是我选的你，你可别以为是你给了我机会哦！_.silk  06_你可别胡思乱想_.silk  07_我才不是特地为你做的。_.silk  08_ 接、接吻什么的，你还早了100年呢！_.silk  09_… 哭…我的胸部…_.silk  11_你这个笨蛋！_.silk  12_再见之类的话，我才懒得对你说…_.silk  17_留在我身边！一辈子！没异议吧！_.silk  18_生日礼物这种东西，我想没有其他人会送给你了吧…_.silk  19_ hi~_.silk  20_这个送给你……_.silk  21_给我等一下！你这个木头人！_.silk  (+21 more)
utils/: bilibili.py  data_orm.py  robot_state.py  save.py  text.py
(+29 files in other folders)
