[project]
name = "a_simple_qq_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "I Love Study", email = "1450069615@qq.com"},
]
dependencies = [
    "graia-ariadne[full]>=0.9.7",
    "prettytable>=2.5.0",
    "pycryptodome>=3.12.0",
    "qrcode>=7.3.1",
    "Pillow>=9.0.0",
    "SQLAlchemy>=1.4.29",
    "matplotlib>=3.5.1",
    "ujson>=5.1.0",
    "graiax-silkcoder>=0.2.0",
    "graiax-msgparse>=0.0.4",
    "graia-scheduler>=0.0.6",
    "graia-saya>=0.0.13",
    "regex>=2021.11.10",
    "graia-broadcast>=0.14.5",
    "aiohttp[speedups]>=3.7.4.post0",
    "playwright>=1.17.2",
    "aiofile>=3.7.4",
    "imageio>=2.16.1",
    "prompt-toolkit>=3.0.28",
    "lxml>=4.9.1",
    "pyyaml>=5.4",
    "graiax-shortcut>=0.2.1",
]
requires-python = ">=3.8,<4"
license = {text = "AGPL-v3"}

[tool.pdm]
