[project]
name = "a_simple_qq_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "I Love Study", email = "1450069615@qq.com"},
]
dependencies = [
    "graia-ariadne[full]",
    "prettytable",
    "pycryptodome",
    "qrcode",
    "Pillow",
    "SQLAlchemy",
    "matplotlib",
    "ujson",
    "graiax-silkcoder",
    "graia-scheduler",
    "graia-saya",
    "regex",
    "graia-broadcast",
    "aiohttp[speedups]",
    "playwright",
    "aiofile",
    "imageio",
    "prompt-toolkit",
    "lxml",
    "pyyaml",
    "graiax-shortcut",
    "skia-python",
    "arclet-alconna-graia",
    "nepattern"
]
requires-python = ">=3.10,<4"
license = {text = "AGPL-v3"}

[tool.pdm]
